# gzdoom

./: CMakeLists.txt
libraries/gdtoa/: CMakeLists.txt
nx/: gzdoom.ini
nx/gdtoa/: arith.h  gd_qnan.h
src/: CMakeLists.txt  gameconfigfile.cpp  version.h
src/common/console/: c_console.cpp
src/common/engine/: i_specialpaths.h
src/common/menu/: menu.cpp
src/common/platform/posix/: i_system.h
src/common/platform/posix/nx/: i_specialpaths.cpp  i_system.cpp  st_start.cpp
src/common/platform/posix/sdl/: i_input.cpp  i_joystick.cpp  i_main.cpp  sdlglvideo.cpp
src/common/rendering/gl_load/: gl_load.c
src/common/utility/: cmdlib.cpp  i_module.cpp  r_memory.cpp
tools/: CMakeLists.txt
tools/nxlauncher/: CMakeLists.txt  Makefile
tools/nxlauncher/src/: config.h  configs.c  configs.h  files.c  files.h  input.c  input.h  main.c  net.c  net.h  screen.c  screen.h  ui.c  ui.h  ui_main.c  ui_misc.c  ui_net.c  ui_pwads.c  utils.c  utils.h
wadsrc/static/zscript/engine/ui/menu/: menu.zs  textentermenu.zs
